2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: second half of the double clicking
	not setting focus properly, in specific this is a gtk+ 2.4 regression,
	bug filed: http://bugzilla.gnome.org/show_bug.cgi?id=138458

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: properly mark IsReadOnly

2004-03-28  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CodeCompletionDataProvider.cs: adding null check,
	should be the last of the code completion bugs relating to the new code

2004-03-28  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CompletionWindow.cs: apply patch from Haakon Nilsen
	<haakon AT ii.uib.no> to fix completion window on KDE.

2004-03-28  John Luke  <jluke@cfl.rr.com>
	
	* Gui/SourceEditorDisplayBinding.cs:
	implement IsReadOnly, fix language to be a switch statement

2004-03-27  Todd berman  <tberman@sevenl.net>

	* CodeCompletion/CodeCompletionDataProvider.cs: use the
	ExpressionFinder if it exists.

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CodeCompletionDataProvider.cs: add refactorying of
	AddResolveResults.

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/*Provider.cs:
	* InsightWindow/*Provider.cs: update to reflect parser differences.

2004-03-26  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorView.xs: add DeleteLine for control + L and
	shift + delete, bug #55993

2004-03-26  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs:
	* CodeCompletion/CompletionWindow.cs: now, ctrl+space will autocomplete
	the entire thing if there is only one match.

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: setup completionWindow to be reused properly
	* CodeCompletion/CompletionWindow.cs: delay a bit before movement to
	attempt to fix correct placement issues. this goes from working
	properly 90% of the time to 99% of the time.

2004-03-25  Todd Berman  <tberman@sevenl.net>
