@@ -1,3 +1,8 @@
+2004-04-01  Todd Berman  <tberman@sevenl.net>
+
+	* CodeCompletion/TextUtilities.cs: if we are already caching the string
+	might as well use it.
+
 2004-03-29  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/SourceEditorDisplayBinding.cs: second half of the double clicking
